
    Feature Changes
    * Modules in PREREQ_PM are no longer loaded in order to figure out
      their version.  parse_version() is used instead.
      [rt.cpan.org 44646]
    * PPD files generated with "make ppd" now use the new REQUIRES key
      rather than the now deprecated DEPENDENCY.
      [rt.cpan.org 25179] (GAAS)
    * PPD files no longer contain the deprecated OS tag.

    Bug Fixes
    * On 5.10 "make ppd" would generate the wrong ARCHITECTURE saying the
      version is 5.1 instead of 5.10.
    * Our pod2man emulation now requires an argument to --perm_rw.
      [rt.cpan.org 35190] (imacat)
    * DISTVNAME was documented as a WriteMakefile() param but you'd
      get a warning if you tried to use it.  [rt.cpan.org 43217]

    Test Fixes
    * basic.t will not leave a "bin" environment variable defined on VMS.
      [rt.cpan.org 42150] (John E. Malmberg)
    * Made the tests work ok on systems whose makes assume that files which
      have the same mod time are out of date.  This is often the case for
      the tests which generate files and run make rapidly.
      [rt.cpan.org 29955] (Ken Hirsch)
    * skip test numbers were wrong on VMS in t/basic.t
      [rt.cpan.org 43511] (John E. Malmberg)

    Portability
    * Removed a few hard coded uses of the "false" command.
      [rt.cpan.org 44504]

    VMS
    * Fixed a few calls to catfile() that should be catdir().
      (John E. Malmberg)
    * Override catdir() and catfile() to expand macros.  This is normally done
      inside File::Spec::VMS but is really a MakeMaker-only thing.
      (John E. Malmberg)

    Other
    * Remove ExtUtils::MakeMaker::bytes and vmsish which are unused and
      seem to never have been used.


6.50  Sun Mar 22 12:28:06 PDT 2009
    Windows    
    * Remove the special checks for compilers that need a "manifest".  Instead,
      the code will just be a no-op if there's no manifest.  Or something.
      I dunno, I'm hoping Jan and Steve know what they're doing.